<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_service_label">Cost of service</string>
    <string name="service_question_label">How was the service?</string>
    <string name="twenty_percentage_label">Amazing (20%)</string>
    <string name="eighteen_percentage_label">Good (18%)</string>
    <string name="fifteen_percentage_label">OK (15%)</string>
    <string name="roup_up_tip_label">Roung up tip?</string>
    <string name="btn_calculate_label">calculate</string>
    <string name="tip_amount_label">Tip Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>

</resources>