<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/cima"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/storeIcon"
        android:src="@drawable/ic_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plain_text_input"
        app:layout_constraintBottom_toBottomOf="@+id/plain_text_input"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/plain_text_input"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cost_service_label"
        app:layout_constraintStart_toEndOf="@+id/storeIcon"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plain_text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/serviceIcon"
        android:src="@drawable/ic_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/service_question_text"
        app:layout_constraintBottom_toBottomOf="@+id/service_question_text"
        />

    <TextView
        android:id="@+id/service_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/serviceIcon"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input"
        android:text="@string/service_question_label"/>

    <RadioGroup
        android:id="@+id/rg_tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_twenty"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service_question_text">

        <RadioButton
            android:id="@+id/rb_twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percentage_label"/>

        <RadioButton
            android:id="@+id/rb_eighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_percentage_label"/>

        <RadioButton
            android:id="@+id/rb_fifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percentage_label"/>
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_round_up_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:useMaterialThemeColors="true"
        android:text="@string/roup_up_tip_label"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_tip_options"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_round_up_tip"/>

    <TextView
        android:id="@+id/tip_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        android:text="@string/tip_amount_label"/>



</androidx.constraintlayout.widget.ConstraintLayout>